Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
M5
-
None
-
None
Description
I was testing a 100% updates workload with 10 threads on a1228 with YCSB and saw that we were never GCing logs... until the run was over. The reason for this is that when calling Tablet::GetEarliestNeededLogIndex we return 0 if a TransactionDriver has an uninitialized OpId.
A min_index of 0 means that we need to retain all the logs, so given enough transactions we never GC.